# job-application-app

./: .env.example  .gitignore  README.md  apply_agent.py  orchestrator.py  pyproject.toml  template.md
.agents/agents/: extractor.md  matcher.md  researcher.md  writer.md
apply_pipeline/: __init__.py  config.py  rendering.py
filters/: Signs of AI writing - Wikipedia.md  The Field Guide to AI Slop.md
scripts/: cv_parser.py
tests/: test_config.py  test_rendering.py
